Fix alignment issues

--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-  margin: 0;
+  margin: 1.5rem;
   background-color: #f5f2f0;
 }
 
@@ -20,7 +20,6 @@ h1 {
 }
 
 h2 {
-  padding: 0 0 1rem;
   font-family: "Denk One", sans-serif;
   color: #623b0c;
 }
